name:              intervals
version:           0.8
synopsis:          Interval Arithmetic
description:
  A 'Numeric.Interval.Interval' is a closed, convex set of floating point values.
  .
  We do not control the rounding mode of the end points of the interval when
  using floating point arithmetic, so be aware that in order to get precise
  containment of the result, you will need to use an underlying type with
  both lower and upper bounds like 'CReal'
homepage:           http://github.com/ekmett/intervals
bug-reports:        http://github.com/ekmett/intervals/issues
license:            BSD3
license-file:       LICENSE
author:             Edward Kmett
maintainer:         ekmett@gmail.com
category:           Math
build-type:         Custom
cabal-version:      >=1.8
tested-with:        GHC == 7.4.2, GHC == 7.6.1, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10, GHC == 8.0.1
extra-source-files:
  .travis.yml
  CHANGELOG.markdown
  README.markdown
  HLint.hs

source-repository head
  type: git
  location: git://github.com/ekmett/intervals.git

custom-setup
  setup-depends:
    base >= 4 && <5,
    Cabal,
    cabal-doctest >= 1 && <1.1

-- You can disable the doctests test suite with -f-test-doctests
flag test-doctests
  description: Enable (or disable via f-test-doctests) the doctest suite when
               using the enable-tests option for cabal.
  default: True
  manual: True

flag herbie
  default: False
  manual: True

library
  hs-source-dirs: src

  exposed-modules:
    Numeric.Interval
    Numeric.Interval.Exception
    Numeric.Interval.Internal
    Numeric.Interval.Kaucher
    Numeric.Interval.NonEmpty
    Numeric.Interval.NonEmpty.Internal

  build-depends:
    array          >= 0.3   && < 0.6,
    base           >= 4     && < 5,
    distributive   >= 0.2   && < 1

  if impl(ghc >=7.4)
    build-depends: ghc-prim

  ghc-options:     -Wall -O2

  if flag(herbie)
    build-depends: HerbiePlugin >= 0.1 && < 0.2
    cpp-options: -DHERBIE
    ghc-options: -fplugin=Herbie


test-suite doctests
  type:           exitcode-stdio-1.0
  main-is:        doctests.hs
  ghc-options:    -Wall -threaded
  hs-source-dirs: tests

  if !flag(test-doctests)
    buildable: False
  else
    build-depends:
      base,
      directory      >= 1.0,
      doctest        >= 0.11.1 && <0.12,
      filepath,
      QuickCheck,
      template-haskell
