name:              intervals
version:           0.9.2
synopsis:          Interval Arithmetic
description:
  A 'Numeric.Interval.Interval' is a closed, convex set of floating point values.
  .
  We do not control the rounding mode of the end points of the interval when
  using floating point arithmetic, so be aware that in order to get precise
  containment of the result, you will need to use an underlying type with
  both lower and upper bounds like 'CReal'
homepage:           http://github.com/ekmett/intervals
bug-reports:        http://github.com/ekmett/intervals/issues
license:            BSD3
license-file:       LICENSE
author:             Edward Kmett
maintainer:         ekmett@gmail.com
category:           Math
build-type:         Simple
cabal-version:      >=1.10
tested-with:        GHC == 7.0.4
                  , GHC == 7.2.2
                  , GHC == 7.4.2
                  , GHC == 7.6.3
                  , GHC == 7.8.4
                  , GHC == 7.10.3
                  , GHC == 8.0.2
                  , GHC == 8.2.2
                  , GHC == 8.4.4
                  , GHC == 8.6.5
                  , GHC == 8.8.3
                  , GHC == 8.10.1
extra-source-files:
  .hlint.yaml
  CHANGELOG.markdown
  README.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/intervals.git

flag herbie
  default: False
  manual: True

library
  hs-source-dirs: src

  exposed-modules:
    Numeric.Interval
    Numeric.Interval.Exception
    Numeric.Interval.Internal
    Numeric.Interval.Kaucher
    Numeric.Interval.NonEmpty
    Numeric.Interval.NonEmpty.Internal

  build-depends:
    array          >= 0.3   && < 0.6,
    base           >= 4     && < 5,
    distributive   >= 0.2   && < 1

  if impl(ghc >=7.4)
    build-depends: ghc-prim

  if !impl(ghc >=8.0)
    build-depends: semigroups >=0.11 && <1

  ghc-options:     -Wall -O2

  if flag(herbie)
    build-depends: HerbiePlugin >= 0.1 && < 0.2
    cpp-options: -DHERBIE
    ghc-options: -fplugin=Herbie

  default-language: Haskell2010
  x-docspec-options: --check-properties
  x-docspec-property-variables: i x y xs ys

test-suite doctests
  type:           exitcode-stdio-1.0
  main-is:        doctests.hs
  ghc-options:    -Wall -threaded
  hs-source-dirs: tests
  build-depends:  base, QuickCheck >=2.14.2
  default-language: Haskell2010
